--- a/styles/SocialCard.module.css
+++ b/styles/SocialCard.module.css
@@ -1,4 +1,14 @@
-.imgCard {
-    width: 50px;
-    height: 50px;
+.container {
+    display: flex;
+    align-items: center;
+}
+
+.image {
+    width: 10%;
+}
+
+.socialName {
+    text-decoration: none;
+    color: #c3bbc9;
+    padding: 0.5rem;
 }
