--- a/styles/IconList.module.css
+++ b/styles/IconList.module.css
@@ -1,26 +1,7 @@
-ul {
+.image{
+    width: 1.5rem;
+}
+
+.container{
     list-style: none;
-    display: flex;
-    justify-content: flex-start;
-    margin: 0;
-    padding: 0;
-}
-
-li {
-    margin-right: 15px;
-}
-
-a {
-    display: block;
-    text-align: center;
-}
-
-img {
-    width: 30px;
-    height: 30px;
-    transition: transform 0.3s ease;
-}
-
-img:hover {
-    transform: scale(1.1);
 }
