feat: create launchBook

--- a/app/inicio/home.module.css
+++ b/app/inicio/home.module.css
@@ -1,19 +1,24 @@
 .pageHome {
     display: flex;
     flex-direction: column;
-    align-items: center
+    align-items: center;
 }
 
-.highlightWeek {
+.containerBooks {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 2rem;
 }
 
 .title {
-    padding: 1rem;
+    padding: 2rem;
     font-size: 1.5rem;
 }
 
-.highlights {
+.listBooks {
     display: flex;
     justify-content: center;
     align-items: center;
