--- a/app/inicio/home.module.css
+++ b/app/inicio/home.module.css
@@ -5,7 +5,7 @@
 }
 
 .containerBooks {
-    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
