--- a/styles/CategoryList.module.css
+++ b/styles/CategoryList.module.css
@@ -3,7 +3,9 @@
     align-items: center;
     justify-content: center;
     background-color: #f8f8f8;
-    padding: 10px;
+    padding: 8px;
+    margin-top: 1rem;
+    width: 50rem;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
@@ -16,6 +18,16 @@
 .image {
     width: 64px;
     height: 64px;
-    object-fit: cover;
     border-radius: 4px;
+}
+
+.name{
+    margin-left: 2rem;
+    font-size: 1rem;
+    color:rgb(66, 8, 121)
+}
+
+.bloco{
+    display: flex;
+    justify-content: center
 }
